--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br> [19/10/23]</i></p>
+<p> <i>Technology is built by a virtual United Nations of talent from all over the world. Anyone with a positive attitude and a cheap laptop can contribute. Technology is the ultimate open society.</i></p>
+<p align='right'> Marc Andreessen, <a href="https://a16z.com/the-techno-optimist-manifesto/"><i>The Techno-Optimist Manifesto</i></a> </p>
+
 <p align="left"> <br> [04/10/23]</i></p>
 <p> <a href="robe-scritte/arrabbiarsi.html">arrabbiarsi</a>. vale la pena?</p>
 
