--- a/robe-scritte/trovare-un-lavoro.html
+++ b/robe-scritte/trovare-un-lavoro.html
@@ -15,8 +15,8 @@
   <p>Torna la serie acclamata dalla critica. Hanno detto del più recente episodio:</p>
 
   <ul>
-  <li>Ma stai bene?</li>
-  <li>Innanzitutto ridimensioniamo</li>
+  <li>"Ma stai bene?"</li>
+  <li>"Innanzitutto ridimensioniamo"</li>
   </ul>
   
   <p>Continuo noncurante dei commenti di questi hater per raggiungere uno dei miei due obiettivi: o il definitivo internamento presso una struttura psichiatrica o un contratto a tempo indeterminato come ospite de La Zanzara.</p>
