--- a/libri.html
+++ b/libri.html
@@ -61,7 +61,8 @@
     <li>Il barone rampante</li>
     <li>SPQR: A History of Ancient Rome</li> 
     <li>Ultra-processed People</li>       
-      
+    <li>G-Man</li>     
+
   </ol>
 
   <h3> 2022 </h3>
