--- a/libri.html
+++ b/libri.html
@@ -62,6 +62,7 @@
     <li>SPQR: A History of Ancient Rome</li> 
     <li>Ultra-processed People</li>       
     <li>G-Man</li>     
+    <li>Designing Your Life</li>    
 
   </ol>
 
