articoli novembre, libri

--- a/libri.html
+++ b/libri.html
@@ -63,6 +63,7 @@
     <li>Ultra-processed People</li>       
     <li>G-Man</li>     
     <li>Designing Your Life</li>    
+    <li>The Battle for Spain</li>    
 
   </ol>
 
