--- a/libri.html
+++ b/libri.html
@@ -63,7 +63,9 @@
     <li>Ultra-processed People</li>       
     <li>G-Man</li>     
     <li>Designing Your Life</li>    
-    <li>The Battle for Spain</li>    
+    <li>The Battle for Spain</li>
+    <li>A Random Walk Down Wall Street</li>
+    <li>The Interstellar Age</li>
 
   </ol>
 
