--- a/libri.html
+++ b/libri.html
@@ -15,6 +15,11 @@
     ogni tanto qualche quote che mi è piaciuta tanto da salvarla.
     per qualcuno per cui due o tre non basterebbero c'è il link a tutto quello che ci ho evidenziato.
 
+  <h3> 2024 </h3>
+  <ol>
+    <li>El gran manipulador: la mentira cotidana de Franco</li>
+  </ol>
+
   <h3> 2023 </h3>
   <ol>
       <li> Murmurs of Earth: The Voyager Interstellar Record</li>
