--- a/libri.html
+++ b/libri.html
@@ -18,6 +18,7 @@
   <h3> 2024 </h3>
   <ol>
     <li>El gran manipulador: la mentira cotidana de Franco</li>
+    <li>The Psychology of Money</li>
   </ol>
 
   <h3> 2023 </h3>
