--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <p> baci, <br> g <br></p>
 
 <p align="left"> <br> [24/01/24]</i></p>
-<p> Hello, I'm Macintosh. It sure is great to get out of that bag. </p>
+<p> <i>Hello, I'm Macintosh. It sure is great to get out of that bag.</i> <br>
+<p> Ho scritto del 40º anniversario del Mac sulla <a href="https://artifactstech.substack.com/p/luomo-e-la-macchina">newsletter</a> di Lorenzo.</p>
 
 <p align="left"> <br> [19/10/23]</i></p>
 <p> <i>Technology is built by a virtual United Nations of talent from all over the world. Anyone with a positive attitude and a cheap laptop can contribute. Technology is the ultimate open society.</i></p>
