--- a/libri.html
+++ b/libri.html
@@ -20,6 +20,8 @@
     <li>El gran manipulador: la mentira cotidana de Franco</li>
     <li>The Psychology of Money</li>
     <li>The Fall of the Roman Empire</li>
+    <li>The Candy Bombers</li>
+    <li>A Certain Idea of France</li>
   </ol>
 
   <h3> 2023 </h3>
