fix success page

--- a/robe-scritte.html
+++ b/robe-scritte.html
@@ -13,7 +13,7 @@
   <h1 align="left"><a href="index.html">orto</a> > robe scritte</h1>
 <main class="lineheight">
 
-  <form name="contact" action="/pages/form-success.html" method="POST" data-netlify="true">
+  <form name="contact" action="/form-success.html" method="POST" data-netlify="true">
     <label for="name">Se vuoi ricevere quello che scrivo, lascia qui sotto la tua mail.</label>
     <div class="input-group">
       <input type="text" name="name" id="name" />
