--- a/robe-scritte.html
+++ b/robe-scritte.html
@@ -17,7 +17,7 @@
     <label for="name">Se vuoi ricevere quello che scrivo, lascia qui sotto la tua mail.</label>
     <div class="input-group">
       <input type="text" name="name" id="name" />
-      <button type="submit" class="text-button">Invia</button>
+      <button type="submit" class="text-button">invia</button>
     </div>
   </form>  
 
