--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br> [09/03/24]</i></p>
+
+<p>novità: se vuoi ricevere aggiornamenti dall'orto inserisci qui sotto la tua mail.</p>
+
+<form name="contact" action="/form-success.html" method="POST" data-netlify="true">
+  <div class="input-group">
+    <input type="text" name="name" id="name" />
+    <button type="submit" class="text-button">invia</button>
+  </div>
+</form>
+
 <p align="left"> <br> [24/01/24]</i></p>
-<p> <i>Hello, I'm Macintosh. It sure is great to get out of that bag.</i> <br>
+<p> <i>Hello, I'm Macintosh. It sure is great to get out of that bag.</i> </p>
 <p> Ho scritto del 40º anniversario del Mac sulla <a href="https://artifactstech.substack.com/p/luomo-e-la-macchina">newsletter</a> di Lorenzo.</p>
 
 <p align="left"> <br> [19/10/23]</i></p>
