edit string email

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <p align="left"> <br> [09/03/24]</i></p>
 
-<p>novità: se vuoi ricevere aggiornamenti dall'orto inserisci qui sotto la tua mail.</p>
+<p>novità: se vuoi ricevere aggiornamenti dall'orto inserisci qui sotto la tua mail. non so ancora che ci farò ma mi farebbe piacere!</p>
 
 <form name="contact" action="/form-success.html" method="POST" data-netlify="true">
   <div class="input-group">
