--- a/robe-scritte.html
+++ b/robe-scritte.html
@@ -14,7 +14,7 @@
 <main class="lineheight">
 
   <form name="contact" action="/form-success.html" method="POST" data-netlify="true">
-    <label for="name">Se vuoi ricevere quello che scrivo, lascia qui sotto la tua mail.</label>
+    <label for="name">se vuoi ricevere quello che scrivo, lascia qui sotto la tua mail. grazie!</label>
     <div class="input-group">
       <input type="text" name="name" id="name" />
       <button type="submit" class="text-button">invia</button>
