--- a/robe-scritte/arrabbiarsi.html
+++ b/robe-scritte/arrabbiarsi.html
@@ -30,7 +30,7 @@
     <input type="text" name="name" id="name" />
     <label for="comment">commento:</label>
     <textarea name="comment" id="comment"></textarea>
-    <button type="submit" class="text-button">Invia</button>
+    <button type="submit" class="text-button">invia</button>
   </form>
 </div>
 
