--- a/robe-scritte/arrabbiarsi.html
+++ b/robe-scritte/arrabbiarsi.html
@@ -26,7 +26,8 @@
 
 <div class="form-container">
   <form name="feedback" action="/comment-success.html" method="POST" data-netlify="true">
-    <label for="name">nome:</label>
+    <label for="name">se hai voglia di lasciare un commento puoi farlo qua sotto oppure a <a href="mailto:io@giacomo.cc">io@giacomo.cc</a>. grazie!<br><br>
+      nome:</label>
     <input type="text" name="name" id="name" />
     <label for="comment">commento:</label>
     <textarea name="comment" id="comment"></textarea>
