--- a/robe-scritte/riorientamento.html
+++ b/robe-scritte/riorientamento.html
@@ -71,6 +71,28 @@
 </ol>
 
 <p>Non so come finirà. Sarà comunque interessante da leggere tra dieci, venti, trent'anni. Ora non vado a correre perché è notte e fa freddo, ma ci possiamo pensare domani mattina.</p>
+
+<div class="form-container">
+  <form name="feedback" action="/comment-success.html" method="POST" data-netlify="true">
+    <label for="name">se hai voglia di lasciare un commento puoi farlo qua sotto oppure a <a href="mailto:io@giacomo.cc">io@giacomo.cc</a>. grazie!<br><br>
+      nome:</label>
+    <input type="text" name="name" id="name" />
+    <label for="comment">commento:</label>
+    <textarea name="comment" id="comment"></textarea>
+    <button type="submit" class="text-button">invia</button>
+  </form>
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var textarea = document.getElementById('comment');
+    textarea.addEventListener('input', function() {
+      this.style.height = 'auto';
+      this.style.height = (this.scrollHeight) + 'px';
+    });
+  });
+</script>
+
 </main>
 </body>
 </html>
