--- a/libri.html
+++ b/libri.html
@@ -21,7 +21,7 @@
     <li>The Psychology of Money</li>
     <li>The Fall of the Roman Empire</li>
     <li>The Candy Bombers</li>
-    <li>A Certain Idea of France</li>
+    <li><u>A Certain Idea of France</u></li>
   </ol>
 
   <h3> 2023 </h3>
