--- a/libri.html
+++ b/libri.html
@@ -22,6 +22,8 @@
     <li>The Fall of the Roman Empire</li>
     <li>The Candy Bombers</li>
     <li><u>A Certain Idea of France</u></li>
+    <li>Butler to the World</li>
+    <li>Enzo Ferrari: The Man and the Machine</li>
   </ol>
 
   <h3> 2023 </h3>
