articoli, libri, robe viste

--- a/robe-viste.html
+++ b/robe-viste.html
@@ -12,6 +12,7 @@
 <h1 align="left"> <a href="index.html">orto</a> > robe viste  </h1>
 <main class="lineheight">
     <div class="responsive-grid">
+      <img class="responsive-image" src="images/pokemon.png" alt="">
       <img class="responsive-image" src="images/scrivania.png" alt="">
       <img class="responsive-image" src="images/nyt.jpeg" alt="">
       <img class="responsive-image" src="images/marteenleon2.png" alt="">
