--- a/libri.html
+++ b/libri.html
@@ -24,7 +24,7 @@
     <li><u>A Certain Idea of France</u></li>
     <li>Butler to the World</li>
     <li>Enzo Ferrari: The Man and the Machine</li>
-    <li><u>The Rise & Fall of the Third Reich</u>/li>
+    <li><u>The Rise & Fall of the Third Reich</u></li>
   </ol>
 
   <h3> 2023 </h3>
