--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br> [23/04/24]</i></p>
+<p> ho scritto del Game Boy sulla <a href="https://artifactstech.substack.com/p/facile-come-giocare">newsletter</a> di Lorenzo.</p>
+<img src="images/pokemon.png" alt="">
+
 <p align="left"> <br> [09/03/24]</i></p>
 
 <p>novità: se vuoi ricevere aggiornamenti dall'orto inserisci qui sotto la tua mail. non so ancora che ci farò ma mi farebbe piacere!</p>
@@ -34,7 +38,7 @@
 
 <p align="left"> <br> [24/01/24]</i></p>
 <p> <i>Hello, I'm Macintosh. It sure is great to get out of that bag.</i> </p>
-<p> Ho scritto del 40º anniversario del Mac sulla <a href="https://artifactstech.substack.com/p/luomo-e-la-macchina">newsletter</a> di Lorenzo.</p>
+<p> ho scritto del 40º anniversario del Mac sulla <a href="https://artifactstech.substack.com/p/luomo-e-la-macchina">newsletter</a> di Lorenzo.</p>
 
 <p align="left"> <br> [19/10/23]</i></p>
 <p> <i>Technology is built by a virtual United Nations of talent from all over the world. Anyone with a positive attitude and a cheap laptop can contribute. Technology is the ultimate open society.</i></p>
