--- a/robe-scritte.html
+++ b/robe-scritte.html
@@ -21,6 +21,7 @@
     </div>
   </form>  
 
+<p>[23/04/24] <a href="https://artifactstech.substack.com/p/facile-come-giocare">facile come giocare</a></p>
 <p>[13/02/24] <a href="https://artifactstech.substack.com/p/luomo-e-la-macchina">l'uomo e la macchina</a></p>
 <p>[04/10/23] <a href="robe-scritte/arrabbiarsi.html">arrabbiarsi</a></p>
 <p>[26/09/23] <a href="https://artifactstech.substack.com/p/se-lintelligenza-artificiale-va-a?utm_source=profile&utm_medium=reader2">se l'ai va a scuola</a></p>
