--- a/libri.html
+++ b/libri.html
@@ -25,6 +25,7 @@
     <li>Butler to the World</li>
     <li>Enzo Ferrari: The Man and the Machine</li>
     <li><u>The Rise & Fall of the Third Reich</u></li>
+     <li><u>Il Fascismo Eterno</u></li>
   </ol>
 
   <h3> 2023 </h3>
