--- a/libri.html
+++ b/libri.html
@@ -25,7 +25,8 @@
     <li>Butler to the World</li>
     <li>Enzo Ferrari: The Man and the Machine</li>
     <li><u>The Rise & Fall of the Third Reich</u></li>
-     <li><u>Il Fascismo Eterno</u></li>
+    <li><u>Il Fascismo Eterno</u></li>
+    <li>Dream Super-Express: A Cultural History of the World's First Bullet Train</li>
   </ol>
 
   <h3> 2023 </h3>
