--- a/libri.html
+++ b/libri.html
@@ -27,6 +27,7 @@
     <li><u>The Rise & Fall of the Third Reich</u></li>
     <li><u>Il Fascismo Eterno</u></li>
     <li>Dream Super-Express: A Cultural History of the World's First Bullet Train</li>
+    <li>Breve Storia del Fascismo</li>
   </ol>
 
   <h3> 2023 </h3>
