articoli maggio, libro

--- a/libri.html
+++ b/libri.html
@@ -28,6 +28,7 @@
     <li><u>Il Fascismo Eterno</u></li>
     <li>Dream Super-Express: A Cultural History of the World's First Bullet Train</li>
     <li>Breve Storia del Fascismo</li>
+    <li>Japan Story</li>
   </ol>
 
   <h3> 2023 </h3>
