--- a/prova.html
+++ b/prova.html
@@ -24,10 +24,10 @@
             </div>
             <div class="tree-view">
                 <ul>
-                    <li><img src="icons/orto.png" alt="Orto"> orto</li>
-                    <li>&nbsp ∟ <img src="icons/folder.png" alt="Robe Scritte"> scritto</li>
+                    <li><img src="prova-icons/orto.png" alt="Orto"> orto</li>
+                    <li>&nbsp ∟ <img src="prova-icons/folder.png" alt="Robe Scritte"> scritto</li>
                     <ul>
-                        <li>&nbsp ∟ <img src="icons/file.png" alt="Arrabbiarsi"> lavoro</li>
+                        <li>&nbsp ∟ <img src="prova-icons/file.png" alt="Arrabbiarsi"> lavoro</li>
                     </ul>
                 </ul>
                 <div class="additional-text">
