--- a/prova.html
+++ b/prova.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Explorer Navigation</title>
+    <title>orto - prova</title>
     <link rel="stylesheet" href="style-prova.css">
 </head>
 <body>
