--- a/libri.html
+++ b/libri.html
@@ -29,6 +29,8 @@
     <li>Dream Super-Express: A Cultural History of the World's First Bullet Train</li>
     <li>Breve Storia del Fascismo</li>
     <li>Japan Story</li>
+    <li>The Real Odessa</li>
+    <li>Electrify</li>
   </ol>
 
   <h3> 2023 </h3>
