libri, articoli giugno 24

--- a/libri.html
+++ b/libri.html
@@ -31,6 +31,7 @@
     <li>Japan Story</li>
     <li>The Real Odessa</li>
     <li>Electrify</li>
+    <li>Charged - A History of Batteries</li>
   </ol>
 
   <h3> 2023 </h3>
