index, fix indovino

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br>[12/07/24]</p>
+<p> <i>If you are lucky enough to have lived in Paris as a young man, then wherever you go for the rest of your life it stays with you, for Paris is a moveable feast.</i> 
+</p>
+<p align="right"> E. Hemingway, <i>A Moveable Feast</i></p>
+
 <p align="left"> <br> [23/04/24]</i></p>
 <p> ho scritto del Game Boy sulla <a href="https://artifactstech.substack.com/p/facile-come-giocare">newsletter</a> di Lorenzo.</p>
 <img src="images/pokemon.png" alt="">
@@ -42,7 +47,7 @@
 
 <p align="left"> <br> [19/10/23]</i></p>
 <p> <i>Technology is built by a virtual United Nations of talent from all over the world. Anyone with a positive attitude and a cheap laptop can contribute. Technology is the ultimate open society.</i></p>
-<p align='right'> Marc Andreessen, <a href="https://a16z.com/the-techno-optimist-manifesto/"><i>The Techno-Optimist Manifesto</i></a> </p>
+<p align='right'> M. Andreessen, <a href="https://a16z.com/the-techno-optimist-manifesto/"><i>The Techno-Optimist Manifesto</i></a> </p>
 
 <p align="left"> <br> [04/10/23]</i></p>
 <p> <a href="robe-scritte/arrabbiarsi.html">arrabbiarsi</a>. vale la pena?</p>
@@ -65,7 +70,7 @@
   It needs a name, and to coin one at random, "memex" will do. A memex is a device in which an individual
   stores all his books, records, and communications, and which is mechanized so that it may be consulted
   with exceeding speed and flexibility. It is an enlarged intimate supplement to his memory. </i> </p>
-  <p align='right'> Vannevar Bush, <a href="https://www.w3.org/History/1945/vbush/vbush-all.shtml"><i>As We May Think</i></a> </p>
+  <p align='right'> V. Bush, <a href="https://www.w3.org/History/1945/vbush/vbush-all.shtml"><i>As We May Think</i></a> </p>
 
 
 <p align="left"> <br> [10/04/23]</i></p>
@@ -93,7 +98,7 @@
   i had worked well, and that needed luck as well as discipline, was a wonderful
   feeling and i was free then to walk anywhere in paris.</i> 
 </p>
-<p align="right"> Ernest Hemingway, <i>A Moveable Feast</i></p>
+<p align="right"> E. Hemingway, <i>A Moveable Feast</i></p>
 
 
 <p align="left"> <br>[08/01/23]</i></p>
@@ -113,7 +118,7 @@
 <p> <i> Something about the interior life of a computer
   remains infinitely interesting to me; it’s not romantic, but it is a romance.
   You flip a bunch of microscopic switches really fast and culture pours out. </i> </p>
-<p align="right"> Paul Ford, <i> Why I Still Love Tech</i></p>
+<p align="right"> P. Ford, <i> Why I Still Love Tech</i></p>
 
 <p align="left"> <br>[05/12/22]</i></p>
 <p> <i> He tried to shoot his way through life with a couple of guns and he lost... But he tried </i> </p>
