--- a/libri.html
+++ b/libri.html
@@ -32,6 +32,8 @@
     <li>The Real Odessa</li>
     <li>Electrify</li>
     <li>Charged - A History of Batteries</li>
+    <li>Deep Work</li>
+    <li>Concorde</li>
   </ol>
 
   <h3> 2023 </h3>
