--- a/libri.html
+++ b/libri.html
@@ -25,7 +25,7 @@
     <li>Butler to the World</li>
     <li>Enzo Ferrari: The Man and the Machine</li>
     <li><u>The Rise & Fall of the Third Reich</u></li>
-    <li><u>Il Fascismo Eterno</u></li>
+    <li><a href="kindle_exports/fascismo-eterno.html"><u>Il Fascismo Eterno</u></a></li>
     <li>Dream Super-Express: A Cultural History of the World's First Bullet Train</li>
     <li>Breve Storia del Fascismo</li>
     <li>Japan Story</li>
@@ -34,6 +34,7 @@
     <li>Charged - A History of Batteries</li>
     <li>Deep Work</li>
     <li>Concorde</li>
+    <li>B. Una vita troppo</li>
   </ol>
 
   <h3> 2023 </h3>
@@ -145,10 +146,7 @@
     <li> Nervous Conditions </li>
     <li> The Making of the Atomic Bomb </li>
     <li> The Soul of a New Machine </li>
-    <li> <u><a href="kindle_exports/why-we-sleep.html">Why We Sleep</u></a> <p> <i>
-      Sixty years of scientific research prevent
-      me from accepting anyone who tells me that he or she can 'get by on just four
-      or five hours of sleep a night just fine.'</i> </p> </li>
+    <li> Why We Sleep </li>
     <li> Why Bob Dylan Matters </li>
     <li> Deng Xiaoping and the Transformation of China </li>
     <li> The Intel Trinity </li>
