--- a/libri.html
+++ b/libri.html
@@ -26,6 +26,7 @@
     <li>Enzo Ferrari: The Man and the Machine</li>
     <li><u>The Rise & Fall of the Third Reich</u></li>
     <li><a href="kindle_exports/fascismo-eterno.html"><u>Il Fascismo Eterno</u></a></li>
+    <p><i>In Italia vi sono oggi alcuni che si domandano se la Resistenza abbia avuto un reale impatto militare sul corso della guerra. Per la mia generazione la questione è irrilevante: comprendemmo immediatamente il significato morale e psicologico della Resistenza. Era motivo d’orgoglio sapere che noi europei non avevamo atteso la liberazione passivamente.</i></p>
     <li>Dream Super-Express: A Cultural History of the World's First Bullet Train</li>
     <li>Breve Storia del Fascismo</li>
     <li>Japan Story</li>
@@ -35,6 +36,7 @@
     <li>Deep Work</li>
     <li>Concorde</li>
     <li>B. Una vita troppo</li>
+    <li>Sette sere</li>
   </ol>
 
   <h3> 2023 </h3>
