--- a/libri.html
+++ b/libri.html
@@ -37,6 +37,7 @@
     <li>Concorde</li>
     <li>B. Una vita troppo</li>
     <li>Sette sere</li>
+    <li>East West Street</li>   
   </ol>
 
   <h3> 2023 </h3>
