--- a/libri.html
+++ b/libri.html
@@ -38,6 +38,11 @@
     <li>B. Una vita troppo</li>
     <li>Sette sere</li>
     <li>East West Street</li>   
+    <li>A New History of Modern Computing</li>   
+    <li>Indelible City</li>
+    <li>Preferirei di no</li>
+    <li>How the World Was One</li>        
+    <li></li>      
   </ol>
 
   <h3> 2023 </h3>
