articoli, libri settembre

--- a/libri.html
+++ b/libri.html
@@ -39,7 +39,7 @@
     <li>Sette sere</li>
     <li>East West Street</li>   
     <li>A New History of Modern Computing</li>   
-    <li>Indelible City</li>
+    <li>Indelible City: Dispossession and Defiance in Hong Kong</li>
     <li>Preferirei di no</li>
     <li>How the World Was One</li>        
     <li></li>      
