--- a/libri.html
+++ b/libri.html
@@ -42,7 +42,8 @@
     <li>Indelible City: Dispossession and Defiance in Hong Kong</li>
     <li>Preferirei di no</li>
     <li>How the World Was One</li>        
-    <li></li>      
+    <li>The Right Stuff</li>
+    <li>On the Road</li>      
   </ol>
 
   <h3> 2023 </h3>
@@ -112,7 +113,7 @@
       di Giava e così mantiene viva la speranza di un posto dove certamente c’è la chiave
       della sua felicità.
  </i> </p></li>
-    <li> <u><a href="kindle_exports/cavaliere-inesistente.html">Il cavaliere inesistente</u></a>
+    <li> <a href="kindle_exports/cavaliere-inesistente.html"> <u> Il cavaliere inesistente</u></a>
       <p> <i> Ma anch’io quello che voglio è soltanto l’essere uno che sa quello che vuole!
  </i> </p></li>
     <li> A Moveable Feast <p> <i> going down the stairs when i had worked well,
@@ -120,7 +121,7 @@
       was free then to walk anywhere in paris. </p> </i> </li>
     <li> <u>Ametora: How Japan Saved American Style </u> </li>
     <li> Cent'anni di solitudine </li>
-    <li> <u><a href="kindle_exports/splendid-vile.html">The Splendid and the Vile</u></a>
+    <li> <a href="kindle_exports/splendid-vile.html"><u> The Splendid and the Vile</u></a>
     <p> <i> At least one brand of toilet paper was also in perilously short supply,
       as the king himself discovered. He managed to sidestep this particular
       scarcity by arranging shipments direct from the British embassy in
@@ -130,7 +131,7 @@
       most acceptable. You will understand this and its name begins with B!!!” </i></p></li>
     <li> The Long Way Home </li>
     <li> Buonanotte, signor Lenin </li>
-    <li> <u><a href="kindle_exports/chiave-stella.html">La chiave a stella</u></a>
+    <li> <a href="kindle_exports/chiave-stella.html"><u>La chiave a stella</u></a>
       <p> <i> vado a cercare una certa ragazza e la trovo, mi fa piacere rivederla
         e la porto a cena al Cambio e mi sento grandioso. </i> </p></li>
     <li> After Steve </li>
@@ -144,7 +145,7 @@
       <p> <i> Not a philosopher. Passion for clarity.
         He was simply unable to let things be foggy.
         Since they always are, this kept him pretty active. </i> </p></li>
-    <li> <u><a href="kindle_exports/hk-diaries.html">Hong Kong Diaries</u></a> </li>
+    <li> <a href="kindle_exports/hk-diaries.html"> <u> Hong Kong Diaries</u></a> </li>
     <li> <a href="kindle_exports/whole-earth.html">Whole Earth</a> <p> <i>
       The implication, of course, was that
     computing was the next thing after LSD.</i> </p> </li>
@@ -162,7 +163,7 @@
   </ol>
   <h3> 2021 </h3>
   <ol>
-    <li> <u><a href="kindle_exports/jfk.html">JFK - Coming of Age in the American Century</u></a></li>
+    <li> <a href="kindle_exports/jfk.html"><u>JFK - Coming of Age in the American Century</u></a></li>
     <li> Guns, Germs, and Steel</li>
     <li> <u>La chiave a stella</u></li>
     <li> The World Beneath the Sands</li>
@@ -189,7 +190,7 @@
     <li> Digital Minimalism</li>
     <li> <u>Il Conte di Montecristo</u></li>
     <li> Animal Farm</li>
-    <li> <u><a href="kindle_exports/gattopardo.html">Il Gattopardo</u></a> </li>
+    <li> <a href="kindle_exports/gattopardo.html"><u>Il Gattopardo</u></a> </li>
     <li> Io Sono il Potere</li>
     <li> These Truths</li>
   </ol>
@@ -244,7 +245,7 @@
     <li> Quer pasticciaccio brutto de via Merulana </li>
     <li> Riccardino </li>
     <li> <u> Postwar </u> </li>
-    <li> <u><a href="kindle_exports/gattopardo.html">Il Gattopardo</u></a> </li>
+    <li> <a href="kindle_exports/gattopardo.html"><u>Il Gattopardo</u></a> </li>
     <li> Palomar </li>
     <li> The Ominvore's Dilemma </li>
     <li> All the President's Men</li>
@@ -260,7 +261,7 @@
 
   <h3> 2019 </h3>
   <ol>
-    <li> <u><a href="kindle_exports/cavaliere-inesistente.html">Il cavaliere inesistente</u></a></li>
+    <li> <u><a href="kindle_exports/cavaliere-inesistente.html"><u>Il cavaliere inesistente</u></a></li>
     <li> Le Cosmicomiche </li>
     <li> Il sistema periodico </li>
     <li> <u>L'Odissea </u></li>
@@ -279,7 +280,7 @@
     <li> I sette peccati capitali dell'economia italiana </li>
     <li> <u> Macbeth </u> </li>
     <li> Socrate </li>
-    <li> <u><a href="kindle_exports/chiave-stella.html">La chiave a stella</u></a> </li>
+    <li> <u><a href="kindle_exports/chiave-stella.html"><u>La chiave a stella</u></a> </li>
     <li> L'Aleph </li>
     <li> Italiani di domani </li>
     <li> Re Lear </li>
