libri retro aggiornamento

--- a/libri-retro.html
+++ b/libri-retro.html
@@ -62,6 +62,13 @@
             <li>Concorde</li>
             <li>B. Una vita troppo</li>
             <li>Sette sere</li>
+            <li>East West Street</li>   
+            <li>A New History of Modern Computing</li>   
+            <li>Indelible City: Dispossession and Defiance in Hong Kong</li>
+            <li>Preferirei di no</li>
+            <li>How the World Was One</li>        
+            <li>The Right Stuff</li>
+            <li>On the Road</li>     
           </ol>
         </div>
       </div>
