libri, fix underline?

--- a/libri.html
+++ b/libri.html
@@ -15,6 +15,11 @@
     ogni tanto qualche quote che mi è piaciuta tanto da salvarla.
     per qualcuno per cui due o tre non basterebbero c'è il link a tutto quello che ci ho evidenziato.
 
+    <h3> 2025 </h3>
+    <ol>
+      <li>The Speed of Sound: Hollywood and the Talkie Revolution</li>      
+    </ol>
+
   <h3> 2024 </h3>
   <ol>
     <li>El gran manipulador: la mentira cotidana de Franco</li>
@@ -35,15 +40,18 @@
     <li>Charged - A History of Batteries</li>
     <li>Deep Work</li>
     <li>Concorde</li>
-    <li>B. Una vita troppo</li>
+    <li><u>B. Una vita troppo</u></li>
     <li>Sette sere</li>
-    <li>East West Street</li>   
+    <li><u>East West Street</u></li>   
     <li>A New History of Modern Computing</li>   
     <li>Indelible City: Dispossession and Defiance in Hong Kong</li>
     <li>Preferirei di no</li>
     <li>How the World Was One</li>        
     <li>The Right Stuff</li>
-    <li>On the Road</li>      
+    <li>On the Road</li>  
+    <li>D-Day: The Battle for Normandy</li>
+    <li><u>A Man Called Intrepid</u></li>     
+    <li>Wild Bill Donovan</li>         
   </ol>
 
   <h3> 2023 </h3>
@@ -261,7 +269,7 @@
 
   <h3> 2019 </h3>
   <ol>
-    <li> <u><a href="kindle_exports/cavaliere-inesistente.html"><u>Il cavaliere inesistente</u></a></li>
+    <li> <a href="kindle_exports/cavaliere-inesistente.html"><u>Il cavaliere inesistente</u></a></li>
     <li> Le Cosmicomiche </li>
     <li> Il sistema periodico </li>
     <li> <u>L'Odissea </u></li>
@@ -280,7 +288,7 @@
     <li> I sette peccati capitali dell'economia italiana </li>
     <li> <u> Macbeth </u> </li>
     <li> Socrate </li>
-    <li> <u><a href="kindle_exports/chiave-stella.html"><u>La chiave a stella</u></a> </li>
+    <li> <a href="kindle_exports/chiave-stella.html"><u>La chiave a stella</u></a> </li>
     <li> L'Aleph </li>
     <li> Italiani di domani </li>
     <li> Re Lear </li>
