--- a/libri.html
+++ b/libri.html
@@ -17,7 +17,8 @@
 
     <h3> 2025 </h3>
     <ol>
-      <li>The Speed of Sound: Hollywood and the Talkie Revolution</li>      
+      <li>The Speed of Sound: Hollywood and the Talkie Revolution</li>
+      <li><u>Storie Naturali</u></li>      
     </ol>
 
   <h3> 2024 </h3>
