libri, articoli febbraio/marzo

--- a/libri.html
+++ b/libri.html
@@ -18,7 +18,12 @@
     <h3> 2025 </h3>
     <ol>
       <li>The Speed of Sound: Hollywood and the Talkie Revolution</li>
-      <li><u>Storie Naturali</u></li>      
+      <li><u>Storie Naturali</u></li>   
+      <li>Man's Search for Meaning</li>   
+      <li>The Man in the High Castle</li>
+      <li>Vichy France - Old Guard and New Order</li>
+      <li>Tne Great Gatsby</li>
+      <li>Operation Paperclip</li>
     </ol>
 
   <h3> 2024 </h3>
