libri, articoli, fix homepage

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
   <p> un digital orto. what will your verse be? </p>
  <p> l’orto serve a me per raccogliere un po’ dei dati che creo e
    tenerli in un posto solo. qua quello che leggo: <a href="libri.html">libri</a> 
-   e <a href="non-libri.html">non libri</a>.
-   <a href="quote.html">qua</a> un po' di quote più o meno lunghe che mi sono piaciute. poi
-  <a href="robe-viste.html">roba che vedo</a> così so dove ritrovarla.
-  <a href="robe-scritte.html">qui</a> quello che ho scritto. </p>
+   e <a href="non-libri.html">non libri</a>. poi <a href="robe-viste.html">roba che vedo</a> così so dove ritrovarla.
+   <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=rRnxB3N0T26k3LVkdecicA&pi=g-K3ZI95Sf6J3">qui</a> quello che sto ascoltando in questo momento.
 
 <p> baci, <br> g <br></p>
 
@@ -71,16 +69,6 @@
   stores all his books, records, and communications, and which is mechanized so that it may be consulted
   with exceeding speed and flexibility. It is an enlarged intimate supplement to his memory. </i> </p>
   <p align='right'> V. Bush, <a href="https://www.w3.org/History/1945/vbush/vbush-all.shtml"><i>As We May Think</i></a> </p>
-
-
-<p align="left"> <br> [10/04/23]</i></p>
-<p> <a href="robe-scritte/chatgpt-scpo-iii.html">continuo con l'harassment</a>.
-  inclusa anche la risposta di Sergei Guriev, MS, PhD, come ci fa notare.
-</p>
-
-<p align="left"> <br> [07/04/23]</i></p>
-<p> <a href="robe-scritte/chatgpt-scpo-ii.html">dalla seconda lettera di giacomo ai rincoglioniti</a>. nel frattempo metto anche la <a href="robe-scritte/chatgpt-scpo-i.html">prima</a>.
-</p>
 
 <p align="left"> <br> [06/04/23]</i></p>
 <p> <a href="robe-scritte/riorientamento.html">riorientamento</a>:
