--- a/libri.html
+++ b/libri.html
@@ -24,6 +24,12 @@
       <li>Vichy France - Old Guard and New Order</li>
       <li>Tne Great Gatsby</li>
       <li>Operation Paperclip</li>
+      <li><u>Con Borges</u></li>
+      <li>L'Invenzione di Morel</li>
+      <li>The Nineties</li>
+      <li><u>Sillabario Veneto</u></li>
+      <li>Italy Reborn: From Fascism to Democracy</li>
+      <li>Nuovo Sillabario Veneto</li>
     </ol>
 
   <h3> 2024 </h3>
