--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br>[22/05/25]</p>
+<p> <i>with an Apple Macintosh <br> you can't run Radio Shack programs <br> in its disc drive. <br> nor can a Commodore 64 <br> drive read a file <br>
+you have created on an <br> IBM Personal Computer. <br> both Kaypro and Osborne computers use <br>  the CP/M operating system <br> but can't read each other's
+<br> handwriting <br> for they format (write <br> on) discs in different <br> ways.<br> the Tandy 2000 runs MS-DOS but <br> can't use most programs produced for
+<br>the IBM Personal Computer <br> unless certain <br> bits and bytes are <br> altered <br> but the wind still blows over <br> Savannah <br>
+and in the Spring <br> the turkey buzzard struts and <br> flounces before his <br> hens.</i> 
+</p>
+<p align="right"> C. Bukowski, <i>16-bit Intel 8088 chip</i></p>
+
 <p align="left"> <br>[12/07/24]</p>
 <p> <i>If you are lucky enough to have lived in Paris as a young man, then wherever you go for the rest of your life it stays with you, for Paris is a moveable feast.</i> 
 </p>
