--- a/libri.html
+++ b/libri.html
@@ -22,7 +22,7 @@
       <li>Man's Search for Meaning</li>   
       <li>The Man in the High Castle</li>
       <li>Vichy France - Old Guard and New Order</li>
-      <li>Tne Great Gatsby</li>
+      <li>The Great Gatsby</li>
       <li>Operation Paperclip</li>
       <li><u>Con Borges</u></li>
       <li>L'Invenzione di Morel</li>
