--- a/libri.html
+++ b/libri.html
@@ -29,7 +29,8 @@
       <li>The Nineties</li>
       <li><u>Sillabario Veneto</u></li>
       <li>Italy Reborn: From Fascism to Democracy</li>
-      <li>Nuovo Sillabario Veneto</li>
+      <li><u>Nuovo Sillabario Veneto</u></li>
+      <li><u>I Piccoli Maestri</u></li>
     </ol>
 
   <h3> 2024 </h3>
