piccoli maestri highlights

--- a/libri.html
+++ b/libri.html
@@ -30,7 +30,9 @@
       <li><u>Sillabario Veneto</u></li>
       <li>Italy Reborn: From Fascism to Democracy</li>
       <li><u>Nuovo Sillabario Veneto</u></li>
-      <li><u>I Piccoli Maestri</u></li>
+      <li><a href="kindle_exports/piccoli-maestri.html"><u>I Piccoli Maestri</u></a></li>
+        <p><i>Come si concentrano le cose: si taglia il grano, si ammucchia la paglia, si allevano i bambini e le bambine, si cominciano le guerre, cento correnti s’incrociano, e a un certo punto c’è la Simonetta in questa guerra, su questa paglia.</i></p>
+      <li>Libera Nos a Malo</li>
     </ol>
 
   <h3> 2024 </h3>
