--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br>[17/06/24]</p>
+<p> l'avremmo fatta noi la <a href="kindle_exports/piccoli-maestri.html">Resistenza</a>?
+</p>
+
 <p align="left"> <br>[22/05/25]</p>
 <p> <i>with an Apple Macintosh <br> you can't run Radio Shack programs <br> in its disc drive. <br> nor can a Commodore 64 <br> drive read a file <br>
 you have created on an <br> IBM Personal Computer. <br> both Kaypro and Osborne computers use <br>  the CP/M operating system <br> but can't read each other's
