libri, articoli giugno 25

--- a/libri.html
+++ b/libri.html
@@ -33,6 +33,9 @@
       <li><a href="kindle_exports/piccoli-maestri.html"><u>I Piccoli Maestri</u></a></li>
         <p><i>Come si concentrano le cose: si taglia il grano, si ammucchia la paglia, si allevano i bambini e le bambine, si cominciano le guerre, cento correnti s’incrociano, e a un certo punto c’è la Simonetta in questa guerra, su questa paglia.</i></p>
       <li>Libera Nos a Malo</li>
+      <li>Lessico famigliare</li>
+      <li>Apple in China</li>
+      <li>The Ambassador: Joseph P. Kennedy at the Court of St. James's</li>
     </ol>
 
   <h3> 2024 </h3>
