--- a/libri.html
+++ b/libri.html
@@ -36,6 +36,10 @@
       <li>Lessico famigliare</li>
       <li>Apple in China</li>
       <li>The Ambassador: Joseph P. Kennedy at the Court of St. James's</li>
+      <li>A Waiter in Paris</li>
+      <li>HHhH</li>
+        <p><i>"What swarmings of people in this world, an hour before its end!” </i></p>
+
     </ol>
 
   <h3> 2024 </h3>
