libri, articoli agosto 25

--- a/libri.html
+++ b/libri.html
@@ -39,7 +39,9 @@
       <li>A Waiter in Paris</li>
       <li>HHhH</li>
         <p><i>"What swarmings of people in this world, an hour before its end!” </i></p>
-
+      <li>Lungo la Pedemontana</li>
+      <li>Pomo pero</li>
+      <li>Una questione privata</li>
     </ol>
 
   <h3> 2024 </h3>
