anno sull'altipiano

--- a/libri.html
+++ b/libri.html
@@ -42,6 +42,8 @@
       <li>Lungo la Pedemontana</li>
       <li>Pomo pero</li>
       <li>Una questione privata</li>
+      <li>Un anno sull'Altipiano</li>
+      <p><i>Ariosto era un po’ come i nostri giornalisti di guerra, e descrisse cento combattimenti senza averne visto uno solo. Ma che grazia e che gioia nel mondo dei suoi eroi.</i></p>
     </ol>
 
   <h3> 2024 </h3>
