--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 
 <p> baci, <br> g <br></p>
 
-<p align="left"> <br>[17/06/24]</p>
+<p align="left"> <br>[01/10/25]</p>
+<p> nell'anniversario del mio iniziare a lavorare, <a href="robe-scritte/transizioni.html">transizioni</a>
+</p>
+
+<p align="left"> <br>[17/06/25]</p>
 <p> l'avremmo fatta noi la <a href="kindle_exports/piccoli-maestri.html">Resistenza</a>?
 </p>
 
