--- a/robe-scritte.html
+++ b/robe-scritte.html
@@ -21,16 +21,14 @@
     </div>
   </form>  
 
+<p>[02/10/24] <a href="robe-scritte/transizioni.html">transizioni</a></p>
 <p>[23/04/24] <a href="https://artifactstech.substack.com/p/facile-come-giocare">facile come giocare</a></p>
 <p>[13/02/24] <a href="https://artifactstech.substack.com/p/luomo-e-la-macchina">l'uomo e la macchina</a></p>
 <p>[04/10/23] <a href="robe-scritte/arrabbiarsi.html">arrabbiarsi</a></p>
 <p>[26/09/23] <a href="https://artifactstech.substack.com/p/se-lintelligenza-artificiale-va-a?utm_source=profile&utm_medium=reader2">se l'ai va a scuola</a></p>
 <p>[18/05/23] <a href="robe-scritte/lavoro.html">lavoro</a></p>
-<p>[10/04/23] <a href="robe-scritte/chatgpt-scpo-iii.html">chatgpt iii</a></p>
-<p>[07/04/23] <a href="robe-scritte/chatgpt-scpo-ii.html">chatgpt ii</a></p>
 <p>[06/04/23] <a href="robe-scritte/riorientamento.html">riorientamento</a></p>
 <p>[14/03/23] <a href="robe-scritte/mille-euro.html">mille euro</a></p>
-<p>[01/02/23] <a href="robe-scritte/chatgpt-scpo-i.html">chatgpt i</a></p>
 
 </main>
 </body>
