quello che scrivo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <p> l’orto serve a me per raccogliere un po’ dei dati che creo e
    tenerli in un posto solo. qua quello che leggo: <a href="libri.html">libri</a> 
    e <a href="non-libri.html">non libri</a>. poi <a href="robe-viste.html">roba che vedo</a> così so dove ritrovarla.
-   <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=rRnxB3N0T26k3LVkdecicA&pi=g-K3ZI95Sf6J3">qui</a> quello che sto ascoltando in questo momento.
+   <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=rRnxB3N0T26k3LVkdecicA&pi=g-K3ZI95Sf6J3">qui</a> quello che sto ascoltando in questo momento e <a href="robe-scritte.html">qui</a> quello che ho scritto.
 
 <p> baci, <br> g <br></p>
 
