--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p> baci, <br> g <br></p>
 
 <p align="left"> <br>[01/10/25]</p>
-<p> nell'anniversario del mio iniziare a lavorare, <a href="robe-scritte/transizioni.html">transizioni</a>
+<p> nell'anniversario del mio iniziare a lavorare, <a href="robe-scritte/transizioni.html">transizioni</a> (di un anno fa)
 </p>
 
 <p align="left"> <br>[17/06/25]</p>
