--- a/libri.html
+++ b/libri.html
@@ -42,8 +42,10 @@
       <li>Lungo la Pedemontana</li>
       <li>Pomo pero</li>
       <li>Una questione privata</li>
+      <li>Less than Zero</li>
       <li>Un anno sull'Altipiano</li>
       <p><i>Ariosto era un po’ come i nostri giornalisti di guerra, e descrisse cento combattimenti senza averne visto uno solo. Ma che grazia e che gioia nel mondo dei suoi eroi.</i></p>
+      <li>Le città invisibili</li>      
     </ol>
 
   <h3> 2024 </h3>
